@@ -20,6 +20,9 @@ MONITOR_FOLDERS="/var/www","/etc/"
 # BASED ON SECONDS, 2 = 2 seconds.
 MONITOR_FREQUENCY=60
 #
+# TURN OFF THE DEFAULT PORT 22 CHECK
+SSH_DEFAULT_PORT_CHECK=ON
+#
 # EXCLUSE CERTAIN DIRECTORIES OR FILES. USE FOR EXAMPLE: /etc/passwd,/etc/hosts.allow
 EXCLUDE=
 # 
@@ -37,23 +40,23 @@ PORTS="135,445,22,1433,3389,8080,21,5900,25,53,110,1723,1337,10000,5800,44443"
 #
 EMAIL_ALERTS=OFF
 #
-# CURRENT SUPPORT IS FOR SMTP, ENTER YOUR USERNAME AND PASSWORD HERE
-USERNAME="thisisjustatest@gmail.com"
+# CURRENT SUPPORT IS FOR SMTP, ENTER YOUR USERNAME AND PASSWORD HERE. LEAVE BLANK FOR OPEN RELAY
+USERNAME=""
 #
-# ENTER THE SMTP PASSWORD HERE
-PASSWORD="SETHERE"
+# ENTER THE SMTP PASSWORD HERE. LEAVE BLANK FOR OPEN RELAY
+PASSWORD=""
+#
+# THIS IS WHO TO SEND THE ALERTS TO - EMAILS WILL BE SENT FROM ARTILLERY TO THIS ADDRESS
+ALERT_USER_EMAIL="user@whatever.com"
 #
 # FOR SMTP ONLY HERE, THIS IS THE MAILTO
-SMTP_TO="testing@test.com"
+SMTP_FROM="Artillery Incident"
 #
 # SMTP ADDRESS FOR SENDING EMAILS, DEFAULT IS GMAIL
 SMTP_ADDRESS="smtp.gmail.com"
 #
 # SMTP PORT FOR SENDING EMAILS DEFAULT IS GMAIL WITH TTLS
 SMTP_PORT="587"
-#
-# ENTER THE EMAIL ADDRESS TO RECEIVE THE ALERT
-ALERT_USER_EMAIL="user@whatever.com"
 #
 # THIS WILL SEND EMAILS OUT DURING A CERTAIN FREQUENCY. IF THIS IS SET TO OFF, ALERTS
 # WILL BE SENT AUTOMATICALLY AS THEY HAPPEN (CAN LEAD TO A LOT OF SPAM)
